[package]
name = "double-agentx"
version = "0.1.0"
edition = "2021"

[dependencies]
agentx = "0.1.1"
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
plugin = "0.2.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
